# HighlanderSolutions.github.io

./: .gitignore  CNAME  README.md  homePage_style.css  index.html  pyproject.toml
Flask Web App/instance/: database.db  workouts.db
Flask Web App/website/: WorkoutPage.py  __init__.py  access.py  auth.py  calender.py  models.py  recommender.py  views.py
Flask Web App/website/blueprints/: WorkoutPage.py  __init__.py  auth.py  calender.py  recommender.py  views.py
Flask Web App/website/static/: DarkTheme.css  Login.css  Recommendation.js  Recommender.css  WorkoutPage.css  WorkoutPage.js  WorkoutViewer.css  WorkoutViewer.js  calender.css  calender.js  index.js
Flask Web App/website/templates/: ModifiedWorkoutPage.html  Recommender.html  Result.html  SignUp.html  WorkoutPage.html  WorkoutViewer.html  base.html  calender.css  calender.html  calender.js  home.html  login.html  sign_up.html  uipage.html  workouts.html
Flask Web App/website/tests/: AddWorkoutTest.py  LogInTest.py  LogOutTest.py  NavBarTest.py  TestBlueprints.py  TestDatabase.py  test_blueprints.py  test_database.py
