[tool.poetry]
name = "flask web app"
version = "0.1.0"
description = "Dependency Management System for Workout Page Website"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
Flask-Login = "^0.6.3"
Flask-SQLAlchemy = "^3.1.1"
pytest = "^8.0.2"
pytest-flask = "^1.3.0"
pytest-cov = "^4.1.0"
selenium = "^4.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
